--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ed-http-util",
+  "name": "@eduact/ed-http-util",
   "version": "1.0.0",
   "description": "http responder utility",
   "main": "lib/index.js",
@@ -36,5 +36,12 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.2.4"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/Eduact-me/ed-http-util/issues"
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "dependencies": {}
 }
